--- a/RIPFinder/ProcessSelection.xaml
+++ b/RIPFinder/ProcessSelection.xaml
@@ -1,13 +1,11 @@
 ﻿<Window x:Class="RIPFinder.ProcessSelection"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:RIPFinder"
-        mc:Ignorable="d"
-        Title="Select Process" Height="300" Width="300">
+    xmlns="https://github.com/avaloniaui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:local="clr-namespace:RIPFinder" mc:Ignorable="d" WindowStartupLocation="CenterOwner" Title="Select Process" Height="300" Width="300" MaxHeight="300" MaxWidth="300" MinHeight="300" MinWidth="300">
     <Grid>
-        <ListBox x:Name="ListBox_Processes" Margin="10,10,10,46" ItemsSource="{Binding}">
+        <ListBox x:Name="ListBox_Processes" Margin="10,10,10,46" Items="{Binding}">
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <Grid>
@@ -16,7 +14,7 @@
                 </DataTemplate>
             </ListBox.ItemTemplate>
         </ListBox>
-        <Button x:Name="Button_OpenThisProcess" Content="Open This Process" Margin="0,0,10,10" Click="Button_OpenThisProcess_Click" HorizontalAlignment="Right" Width="125" Height="20" VerticalAlignment="Bottom"/>
+        <Button x:Name="Button_OpenThisProcess" Content="Open This Process" Margin="0,0,10,10" Click="Button_OpenThisProcess_Click" HorizontalAlignment="Right" Width="125" VerticalAlignment="Bottom"/>
 
     </Grid>
 </Window>
